--- a/settings.properties
+++ b/settings.properties
@@ -1,4 +1,4 @@
 report.format=sarif
-scontrol.rep.git.workspace=C:\\actions-runner\\_work\\MISRA\\MISRA
-scontrol.rep.git.url=https://github.com/tmxkudo/MISRA
+scontrol.rep.git.workspace=C:\\actions-runner_misra\\_work\\\cpptest_GitHub_Actions_MISRA\\\cpptest_GitHub_Actions_MISRA
+scontrol.rep.git.url=https://github.com/tmxkudo/cpptest_GitHub_Actions_MISRA
 
