--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -40,7 +40,7 @@ jobs:
         compilerConfig: 'gcc_4_9'
         testConfig: 'builtin://MISRA C 2012'
         reportFormat: xml,html,sarif
-        input: './cpptest_GitHub_Actions_MISRA/cpptestscan.bdf'
+        input: './cpptestscan.bdf'
         additionalParams: '-localsettings ./settings.properties -localsettings ../cpptestcli.properties -publish'
         commandLinePattern: '${cpptestcli} -data ../workspace -config "${testConfig}" -report "${reportDir}" -bdf "${input}" ${additionalParams}'
 
