--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -4,7 +4,7 @@ name: CpptestCI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [ master,develop ]
   pull_request:
     branches: [ master ]
 
