--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -3,8 +3,8 @@ name: CpptestCI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  #push:
-  #  branches: [ master,develop ]
+  push:
+    branches: [ master,develop ]
   pull_request:
     branches: [ master ]
 
