--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -41,7 +41,7 @@ jobs:
         testConfig: 'builtin://MISRA C 2012'
         reportFormat: xml,html,sarif
         input: './cpptestscan.bdf'
-        additionalParams: '-localsettings ./settings.properties -localsettings ../cpptestcli.properties -publish'
+        additionalParams: '-localsettings ./settings.properties -publish'
         commandLinePattern: '${cpptestcli} -data ../workspace -config "${testConfig}" -report "${reportDir}" -bdf "${input}" ${additionalParams}'
 
     # Uploads analysis results in the SARIF format, so that they are displayed as GitHub code scanning alerts.
