--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -18,6 +18,7 @@ jobs:
 
     steps:
     - name: Checkout code
+      paths: 'C:\Program Files\Git\bin'
       uses: actions/checkout@v3
     
     - name: Generate BDF
