--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -24,7 +24,7 @@ jobs:
       env:
         CPPTEST_SCAN_PROJECT_NAME: MISRA
       run: |
-        & "C:\Program Files\Parasoft\C++test\2021.2\cpptest\bin\cpptesttrace.exe" make all
+        & "C:\Parasoft\C++test\2021.2\cpptest\bin\cpptesttrace.exe" make all
       working-directory: ./
 
     - name: Remove Workspace
@@ -36,8 +36,8 @@ jobs:
       # Use the 'run-cpptest-action' GitHub Action.
       uses: parasoft/run-cpptest-action@1.0.1
       with:
-        installDir: 'C:\Program Files\Parasoft\C++test\2021.2\cpptest'
-        compilerConfig: 'gcc_4_9'
+        installDir: 'C:\Parasoft\C++test\2021.2\cpptest'
+        compilerConfig: 'gcc_7-64'
         testConfig: 'builtin://MISRA C 2012'
         reportFormat: xml,html,sarif
         input: './cpptestscan.bdf'
