--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -3,10 +3,10 @@ name: CpptestCI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master,develop ]
+  #push:
+  #  branches: [ add_newfeature ]
   pull_request:
-    branches: [ master ]
+    branches: [ develop ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
