--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches: [ add_newfeature ]
   pull_request:
-    branches: [ develop ]
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
