--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -16,6 +16,14 @@ jobs:
     name: Analyze project with C/C++test
     runs-on: self-hosted
 
+    # Specifies required permissions for upload-sarif action
+    permissions:
+      # required for all workflows
+      security-events: write
+      # only required for workflows in private repositories
+      actions: read
+      contents: read
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
