--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -16,15 +16,23 @@ jobs:
     name: Analyze project with C/C++test
     runs-on: self-hosted
 
+    # Specifies required permissions for upload-sarif action
+    permissions:
+      # required for all workflows
+      security-events: write
+      # only required for workflows in private repositories
+      actions: read
+      contents: read
+      
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     
     - name: Generate BDF
       env:
         CPPTEST_SCAN_PROJECT_NAME: MISRA
       run: |
-        & "C:\Parasoft\2021.2\cpptest\bin\cpptesttrace.exe" make all
+        & "C:\Parasoft\24.2\cpptest\bin\cpptesttrace.exe" make all
       working-directory: ./
 
     - name: Remove Workspace
@@ -34,9 +42,9 @@ jobs:
 
     - name: Run C++test
       # Use the 'run-cpptest-action' GitHub Action.
-      uses: parasoft/run-cpptest-action@1.0.1
+      uses: parasoft/run-cpptest-action@2.0.2
       with:
-        installDir: 'C:\Parasoft\2021.2\cpptest'
+        installDir: 'C:\Parasoft\24.2\cpptest'
         compilerConfig: 'gcc_7-64'
         testConfig: 'builtin://MISRA C 2012'
         reportFormat: xml,html,sarif
@@ -47,14 +55,14 @@ jobs:
     # Uploads analysis results in the SARIF format, so that they are displayed as GitHub code scanning alerts.
     - name: Upload results (SARIF)
       if: always()
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: reports/report.sarif
     
     # Uploads an archive that includes all report files (.xml, .html, .sarif).
     - name: Archive reports
       if: always()
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: Static analysis reports
         path: reports/*.*
