--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -34,11 +34,15 @@ jobs:
     # Checks out your repository under $GITHUB_WORKSPACE, so that your job can access it.
     - name: Checkout code
       uses: actions/checkout@v4
+
+    - name:  set path
+      run: |
+        echo C:\Parasoft\24.2\cpptest\bin >> $GITHUB_PATH
     
     # Builds your Make project using 'cpptesttrace' to collect input data for code analysis.
     # Be sure 'cpptesttrace' is available on $PATH.
     - name: Build project
-      run: "C:\Parasoft\24.2\cpptest\bin\cpptesttrace" make clean all
+      run: cpptesttrace make clean all
 
     # Runs code analysis with C/C++test.
     - name: Run C/C++test
