--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -34,11 +34,12 @@ jobs:
     # Checks out your repository under $GITHUB_WORKSPACE, so that your job can access it.
     - name: Checkout code
       uses: actions/checkout@v4
-    
+      
     # Builds your Make project using 'cpptesttrace' to collect input data for code analysis.
     # Be sure 'cpptesttrace' is available on $PATH.
     - name: Build project
-      run: "C:\Parasoft\24.2\cpptest\bin\cpptesttrace" make clean all
+      run: |
+        & "C:\Parasoft\24.2\cpptest\bin\cpptesttrace.exe" make all
 
     # Runs code analysis with C/C++test.
     - name: Run C/C++test
