--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -41,6 +41,11 @@ jobs:
       run: |
         & "C:\Parasoft\24.2\cpptest\bin\cpptesttrace.exe" make all
 
+    - name: Remove Workspace
+      run: |
+         Remove-Item -Recurse ../workspace
+      working-directory: ./
+
     # Runs code analysis with C/C++test.
     - name: Run C/C++test
       # Use the 'run-cpptest-action' GitHub action.
@@ -52,7 +57,7 @@ jobs:
         reportFormat: xml,html,sarif
         input: './cpptestscan.bdf'
         additionalParams: '-localsettings ./settings.properties -publish'
-        commandLinePattern: '${cpptestcli} -data ../workspace -config "${testConfig}" -report "${reportDir}" -bdf "${input}" ${additionalParams}'
+        commandLinePattern: '${cpptestcli} -J-Duser.language=EN -J-Duser.country=US -data ../workspace -config "${testConfig}" -report "${reportDir}" -bdf "${input}" ${additionalParams}'
 
     # Uploads analysis results in the SARIF format, so that they are displayed as GitHub code scanning alerts.
     - name: Upload results (SARIF)
