--- a/.github/workflows/cpptest.yml
+++ b/.github/workflows/cpptest.yml
@@ -57,7 +57,7 @@ jobs:
         reportFormat: xml,html,sarif
         input: './cpptestscan.bdf'
         additionalParams: '-localsettings ./settings.properties -publish'
-        commandLinePattern: '${cpptestcli} -J-Duser.language=EN -J-Duser.country=US -data ../workspace -config "${testConfig}" -report "${reportDir}" -bdf "${input}" ${additionalParams}'
+        commandLinePattern: '${cpptestcli} -data ../workspace -config "${testConfig}" -report "${reportDir}" -bdf "${input}" ${additionalParams}'
 
     # Uploads analysis results in the SARIF format, so that they are displayed as GitHub code scanning alerts.
     - name: Upload results (SARIF)
